@@ -18,12 +18,11 @@ mailing list.  You can subscribe and get further information here:
 
     http://mail.gnome.org/mailman/listinfo/gnome-devtools
 
-GtkSourceView is free software and is released under the terms of
-GNU General Public License. Most of the library source code and language
-specification files are released under the GNU Lesser General Public License
-(see the files for exact terms). We are in the process of relicensing the
-whole library under the LGPL. All future contributions to the project
-(including language specification files) must be LGPL-licensed.
+GtkSourceView library is free software and is released under the terms of
+GNU General Library Public License. Some language specification files are
+released under the GNU General Public License (see the files for exact terms).
+We are in the process of relicensing the whole package under the LGPL.
+All future contributions to the project must be LGPL-licensed.
 
 
 Installation
