@@ -2,8 +2,8 @@
 <!DOCTYPE language SYSTEM "language.dtd">
 <!--
 
- Copyright (C) 
- Author: 
+ Author: Sebastian Dröge <slomo@circular-chaos.org>
+ Copyright (C) 2006 Sebastian Dröge <slomo@circular-chaos.org>
 
  This library is free software; you can redistribute it and/or
  modify it under the terms of the GNU Library General Public
